# Tater-Tube-Steam

./: .gitignore  ARCHITECTURE.md  BUILDING.md  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  Main.qml  README.md  update-manifest.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  hardware_validation.yml
.github/workflows/: release.yml  steam-linux.yml
assets/audio/menu/: README.md
assets/setup/: index.html
assets/steam/store/: README.md
docs/: STEAM-RELEASE-CHECKLIST.md  STEAM-STORE-COPY.md  STEAM.md
modules/ambient_mode/: manifest.json
modules/audio_tapes/: manifest.json
modules/audio_tapes/views/: Root.qml
modules/emby_jellyfin/: manifest.json
modules/emby_jellyfin/views/: Item.qml  Library.qml  LocalLogin.qml  Player.qml  Root.qml  VodTvMenu.qml  VodTvMode.qml
modules/local_files/: manifest.json
modules/local_files/views/: Player.qml  Root.qml
modules/moonlight/: manifest.json
modules/moonlight/views/: Root.qml
modules/ota/: manifest.json
modules/ota/views/: Root.qml
modules/retro/: manifest.json
modules/retro/ports/: 2ship2harkinian.json  README.md  dusklight.json  shipwright.json  sm64coopdx.json  spaghettikart.json  starship.json
modules/retro/views/: Root.qml
modules/shared/: TaterBumpers.js
modules/usenet/: manifest.json
modules/usenet/views/: Browse.qml  LocalPlayer.qml  LocalSeason.qml  LocalShow.qml  Root.qml  TubeTvMenu.qml  TubeTvMode.qml
modules/youtube_playlist/: manifest.json
modules/youtube_playlist/views/: Root.qml
packaging/ports/2ship2harkinian/: Dockerfile.steamos  tater-tube.patch
packaging/ports/dusklight/: Dockerfile.steamos  nod-rust-1.85.patch  tater-tube.patch
packaging/ports/shipwright/: Dockerfile.steamos  crt-display.patch  tater-tube.patch
packaging/ports/sm64coopdx/: Dockerfile.steamos  exit-to-tater-tube.patch  steam-runtime.patch
packaging/ports/spaghettikart/: Dockerfile.steamos  tater-tube.patch
packaging/ports/starship/: Dockerfile.steamos  crt-display.patch  tater-tube.patch
packaging/steam/: Dockerfile.runtimes  Dockerfile.sniper  SOURCE.txt  core-manifest.tsv  launch-tater-tube.sh  tater-tube.desktop
packaging/steam/runtime-notices/: APPROVED-CORES.txt  CANDIDATE-CORES.txt  moonlight-sdl.txt  mpv.txt  retroarch-cores.txt  retroarch.txt
packaging/steam/steamworks/: app_build.vdf.example  depot_build.vdf.example
scripts/: 240mp-bluetooth-control  240mp-update  audio-vu.lua  build-2ship2harkinian-port.sh  build-dusklight-port.sh  build-moonlight-sdl.sh  build-pi-image.sh  build-shipwright-port.sh  build-sm64coopdx-port.sh  build-spaghettikart-port.sh  build-starship-port.sh  build-steam-assets.sh  build-steam-libretro-cores.sh  build-steam-linux.sh  build-steam-runtimes.sh  build-steam-sniper.sh  capture-steam-screenshots.sh  capture-steam-trailer.sh  check-generated-helpers.sh  fetch-steam-runtime-bundle.sh  install.sh  media-keys.lua  mpv-osc.lua  ota-osc.lua  package-steam-runtime-bundle.sh  playback-transition.lua  prepare-steam-static-tools.sh  prepare-steamworks-manifests.sh  test-build-steam-sniper-paths.sh  validate-steam-assets.sh  validate-steam-core-manifest.sh  validate-steam-depot.sh  validate-steam-libretro-cores.py  vcr-osd.lua
scripts/lib/: pi-setup.sh
scripts/pi-image/stage240mp/00-install-app/: 00-packages  00-run.sh  01-run-chroot.sh
scripts/pi-image/stage240mp/00-install-app/files/: config-crt-ntsc.txt  config-crt-pal.txt
src/: AppCore.cpp  AppCore.h  main.cpp
src/api/: ControlApiServer.cpp  ControlApiServer.h
src/audio/: MenuSoundPlayer.cpp  MenuSoundPlayer.h
src/input/: InputManager.cpp  InputManager.h
src/media/: CommercialLibrary.cpp  CommercialLibrary.h
src/modules/emby_jellyfin/: EmbyJellyfinBackend.cpp  EmbyJellyfinBackend.h
src/modules/moonlight/: MoonlightBackend.cpp  MoonlightBackend.h
src/modules/retro/: GamePortCatalog.cpp  GamePortCatalog.h  RetroBackend.cpp  RetroBackend.h
src/modules/usenet/: UsenetBackend.cpp  UsenetBackend.h
src/modules/youtube_playlist/: YouTubePlaylistBackend.cpp  YouTubePlaylistBackend.h
src/player/: MpvController.cpp  MpvController.h
tests/: GamePortCatalogTest.cpp  RetroNasFallbackTest.cpp
tools/: generate-menu-sounds.sh
views/: ControllerMapper.qml  ModuleList.qml  ModuleSettings.qml  Settings.qml  TaterPicks.qml
views/Components/: StaticBackground.qml  TaterKeyboard.qml  qmldir
