cmake_minimum_required(VERSION 3.21)
project(TaterTube VERSION 1.8.2 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_AUTOMOC ON)

option(TATER_TUBE_STEAM "Build the Steam desktop distribution" OFF)

include(GNUInstallDirs)
include(CTest)

find_package(Qt6 REQUIRED COMPONENTS Core Gui Quick Qml Network Svg Concurrent)
find_package(SDL2 CONFIG REQUIRED) # gamepad input (InputManager)

# libdrm is used on Linux/RPi to save and restore the KMS CRTC state
# around mpv playback so Qt EGLFS can resume cleanly after mpv exits.
if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
    find_package(PkgConfig REQUIRED)
    pkg_check_modules(Libdrm REQUIRED libdrm)
endif()

if(APPLE)
    enable_language(OBJCXX)
endif()

add_executable(240mp
    src/main.cpp
    src/AppCore.cpp
    src/modules/local_files/LocalFilesBackend.cpp
    src/modules/emby_jellyfin/EmbyJellyfinBackend.cpp
    src/modules/retro/GamePortCatalog.cpp
    src/modules/retro/RetroBackend.cpp
    src/modules/youtube_playlist/YouTubePlaylistBackend.cpp
    src/modules/moonlight/MoonlightBackend.cpp
    src/modules/usenet/UsenetBackend.cpp
    src/media/CommercialLibrary.cpp
    src/audio/MenuSoundPlayer.cpp
    src/player/MpvController.cpp
    src/input/InputManager.cpp
    src/api/ControlApiServer.cpp
    $<$<BOOL:${APPLE}>:src/macos_utils.mm>
)

target_link_libraries(240mp PRIVATE
    Qt6::Core
    Qt6::Gui
    Qt6::Quick
    Qt6::Qml
    Qt6::Network
    Qt6::Svg
    Qt6::Concurrent
    SDL2::SDL2
    $<$<PLATFORM_ID:Linux>:${Libdrm_LIBRARIES}>
)

if(APPLE)
    target_link_libraries(240mp PRIVATE "-framework AppKit")
endif()

if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
    target_include_directories(240mp PRIVATE ${Libdrm_INCLUDE_DIRS})
endif()

target_include_directories(240mp PRIVATE
    src
)

target_compile_definitions(240mp PRIVATE
    TATER_TUBE_VERSION="${PROJECT_VERSION}"
    $<$<BOOL:${TATER_TUBE_STEAM}>:TATER_TUBE_STEAM_BUILD=1>
)

if(TATER_TUBE_STEAM)
    set_target_properties(240mp PROPERTIES
        OUTPUT_NAME "tater-tube"
        INSTALL_RPATH "$ORIGIN/../lib;$ORIGIN/../lib/tater-tube"
        INSTALL_RPATH_USE_LINK_PATH FALSE
    )
endif()

# ── macOS bundle metadata ──────────────────────────────────────────────────────
set_target_properties(240mp PROPERTIES
    MACOSX_BUNDLE TRUE
    MACOSX_BUNDLE_BUNDLE_NAME "Tater Tube"
    MACOSX_BUNDLE_BUNDLE_VERSION "${PROJECT_VERSION}"
    MACOSX_BUNDLE_SHORT_VERSION_STRING "${PROJECT_VERSION}"
    MACOSX_BUNDLE_GUI_IDENTIFIER "com.tatertotterson.tatertube"
    MACOSX_BUNDLE_ICON_FILE "assets/images/240-mp"
)

if(NOT TATER_TUBE_STEAM)
    set_target_properties(240mp PROPERTIES INSTALL_RPATH_USE_LINK_PATH TRUE)
endif()

# ── Dev bundle symlink (macOS only, non-CI) ───────────────────────────────────
# Makes double-clicking build/240mp.app work during development by symlinking
# Contents/Resources → repo root so resolveAppRoot() finds the QML files.
# Skipped in CI (ENV{CI} is set by GitHub Actions) because cmake --install
# populates Resources with real files — a symlink in the build tree would be
# captured by any packaging step pointing to a CI path that doesn't exist.
if(APPLE AND NOT DEFINED ENV{CI})
    add_custom_command(TARGET 240mp POST_BUILD
        COMMAND ${CMAKE_COMMAND} -E remove -f
            "$<TARGET_BUNDLE_CONTENT_DIR:240mp>/Resources"
        COMMAND ${CMAKE_COMMAND} -E create_symlink
            "${CMAKE_SOURCE_DIR}"
            "$<TARGET_BUNDLE_CONTENT_DIR:240mp>/Resources"
        COMMENT "Symlinking repo root as bundle Resources (dev build)"
    )
endif()

# ── Install rules ──────────────────────────────────────────────────────────────
if(APPLE)
    install(TARGETS 240mp BUNDLE DESTINATION . COMPONENT Runtime)

    # Use a hardcoded relative path — $<TARGET_BUNDLE_CONTENT_DIR> resolves to
    # the build tree, not the install prefix, inside install() rules.
    install(FILES
        "${CMAKE_SOURCE_DIR}/Main.qml"
        "${CMAKE_SOURCE_DIR}/update-manifest.json"
        DESTINATION "240mp.app/Contents/Resources"
        COMPONENT Runtime)

    install(DIRECTORY
        "${CMAKE_SOURCE_DIR}/views"
        "${CMAKE_SOURCE_DIR}/modules"
        "${CMAKE_SOURCE_DIR}/assets"
        DESTINATION "240mp.app/Contents/Resources"
        COMPONENT Runtime)

    install(DIRECTORY
        "${CMAKE_SOURCE_DIR}/scripts"
        DESTINATION "240mp.app/Contents/Resources"
        USE_SOURCE_PERMISSIONS
        COMPONENT Runtime)

    # macdeployqt is NOT run here — it requires Qt frameworks to be present and
    # is environment-specific. Run it manually in CI after cmake --install.
else()
    install(TARGETS 240mp
        RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}"
        COMPONENT Runtime)

    install(FILES
        "${CMAKE_SOURCE_DIR}/Main.qml"
        "${CMAKE_SOURCE_DIR}/update-manifest.json"
        DESTINATION "${CMAKE_INSTALL_DATADIR}/240mp"
        COMPONENT Runtime)

    install(DIRECTORY
        "${CMAKE_SOURCE_DIR}/views"
        "${CMAKE_SOURCE_DIR}/modules"
        DESTINATION "${CMAKE_INSTALL_DATADIR}/240mp"
        COMPONENT Runtime)

    if(TATER_TUBE_STEAM)
        install(DIRECTORY
            "${CMAKE_SOURCE_DIR}/assets"
            DESTINATION "${CMAKE_INSTALL_DATADIR}/240mp"
            COMPONENT Runtime
            PATTERN "steam" EXCLUDE)

        install(FILES
            "${CMAKE_SOURCE_DIR}/scripts/audio-vu.lua"
            "${CMAKE_SOURCE_DIR}/scripts/media-keys.lua"
            "${CMAKE_SOURCE_DIR}/scripts/mpv-osc.lua"
            "${CMAKE_SOURCE_DIR}/scripts/ota-osc.lua"
            "${CMAKE_SOURCE_DIR}/scripts/playback-transition.lua"
            "${CMAKE_SOURCE_DIR}/scripts/vcr-osd.lua"
            DESTINATION "${CMAKE_INSTALL_DATADIR}/240mp/scripts"
            COMPONENT Runtime)
    else()
        install(DIRECTORY
            "${CMAKE_SOURCE_DIR}/assets"
            DESTINATION "${CMAKE_INSTALL_DATADIR}/240mp"
            COMPONENT Runtime)

        install(DIRECTORY
            "${CMAKE_SOURCE_DIR}/scripts"
            DESTINATION "${CMAKE_INSTALL_DATADIR}/240mp"
            USE_SOURCE_PERMISSIONS
            COMPONENT Runtime)
    endif()

    if(TATER_TUBE_STEAM AND EXISTS "${CMAKE_SOURCE_DIR}/vendor")
        install(DIRECTORY
            "${CMAKE_SOURCE_DIR}/vendor/"
            DESTINATION "${CMAKE_INSTALL_DATADIR}/240mp/vendor"
            USE_SOURCE_PERMISSIONS
            COMPONENT Runtime)
    endif()
endif()

# ── CPack ──────────────────────────────────────────────────────────────────────
# Releases are Linux arm64 tarballs for Raspberry Pi. macOS builds remain a local
# development smoke-test path and are not packaged by CPack.
if(NOT APPLE)
    set(CPACK_PACKAGE_NAME "Tater Tube")
    set(CPACK_PACKAGE_VERSION "${PROJECT_VERSION}")
    set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Tater Tube Media Player")
    set(CPACK_PACKAGE_VENDOR "Tater Tube")
    set(CPACK_GENERATOR "TGZ")
    set(CPACK_PACKAGING_INSTALL_PREFIX "/usr/local")
    include(CPack)
endif()

if(BUILD_TESTING)
    find_package(Qt6 QUIET COMPONENTS Test)
    if(TARGET Qt6::Test)
        add_executable(game-port-catalog-test
            tests/GamePortCatalogTest.cpp
            src/modules/retro/GamePortCatalog.cpp
        )
        target_include_directories(game-port-catalog-test PRIVATE src)
        target_link_libraries(game-port-catalog-test PRIVATE Qt6::Core Qt6::Test)
        add_test(NAME game-port-catalog COMMAND game-port-catalog-test)
    endif()
endif()

if(BUILD_TESTING AND TATER_TUBE_STEAM AND CMAKE_SYSTEM_NAME STREQUAL "Linux")
    find_package(Qt6 REQUIRED COMPONENTS Test)

    add_executable(retronas-fallback-test
        tests/RetroNasFallbackTest.cpp
        src/modules/retro/GamePortCatalog.cpp
        src/modules/retro/RetroBackend.cpp
    )
    target_include_directories(retronas-fallback-test PRIVATE
        src
        ${Libdrm_INCLUDE_DIRS}
    )
    target_compile_definitions(retronas-fallback-test PRIVATE
        TATER_TUBE_STEAM_BUILD=1
    )
    target_link_libraries(retronas-fallback-test PRIVATE
        Qt6::Core
        Qt6::Concurrent
        Qt6::Gui
        Qt6::Test
        ${Libdrm_LIBRARIES}
    )
    add_test(NAME retronas-fallback COMMAND retronas-fallback-test)
endif()
